# Navi

./: .gitattributes  .gitignore  CLAUDE.md  README.md
.claude-plugin/: plugin.json
.github/workflows/: bump.yml  release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/renderer/: island.css  island.html  island.js
