[package]
name = "navi"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "navi"
path = "src/main.rs"

[dependencies]
tauri        = { version = "2", features = ["tray-icon", "image-png"] }
tokio        = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "macros"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = { version = "1", features = ["preserve_order"] }
tauri-utils  = { version = "2" }
windows-sys  = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
dirs         = "5"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[package.metadata.bundle]
identifier = "com.navi.overlay"

[package.metadata.tauri-winres]
